--- a/charts/incubator/hasty-paste/Chart.yaml
+++ b/charts/incubator/hasty-paste/Chart.yaml
@@ -4,6 +4,10 @@ dependencies:
   - name: common
     repository: https://library-charts.truecharts.org
     version: 11.0.7
+  - condition: redis.enabled
+    name: redis
+    repository: https://charts.truecharts.org
+    version: 5.0.16
 deprecated: false
 description: A fast and minimal paste bin, written in Python using Quart.
 home: https://truecharts.org/docs/charts/incubator/hasty-paste
@@ -23,6 +27,7 @@ name: hasty-paste
 sources:
   - https://github.com/truecharts/charts/tree/master/charts/incubator/hasty-paste
   - https://github.com/enchant97/hasty-paste
+  - https://github.com/enchant97/hasty-paste/blob/main/docs/install.md
 type: application
 version: 0.0.1
 annotations:
