--- a/charts/incubator/hasty-paste/values.yaml
+++ b/charts/incubator/hasty-paste/values.yaml
@@ -3,6 +3,30 @@ image:
   pullPolicy: IfNotPresent
   tag: 1.7.0@sha256:525060fac104c013a637ae4cbe8a3ceb8642a51929e1d63738f2d05b823653d1
 
+envFrom:
+  - secretRef:
+      name: '{{ include "tc.common.names.fullname" . }}-secret'
+
+hastyPaste:
+  new_at_index: false
+  enable_public_list: false
+  max_body_size: 2000000
+  log_level: WARNING
+  workers: 1
+  interface:
+    default_use_long_id: false
+    default_expire_time_enable: false
+    default_expire_time_minutes: 0
+    default_expire_time_hours: 1
+    default_expire_time_days: 0
+  branding:
+    title: ""
+    description: ""
+    icon: ""
+    favicon: ""
+    css_file: ""
+    hide_version: false
+
 service:
   main:
     ports:
@@ -15,6 +39,11 @@ persistence:
   config:
     enabled: true
     mountPath: /app/data
+
+redis:
+  enabled: true
+  existingSecret: rediscreds
+  redisUsername: hasty-paste
 
 portal:
   enabled: true
