--- a/charts/incubator/hasty-paste/questions.yaml
+++ b/charts/incubator/hasty-paste/questions.yaml
@@ -8,6 +8,127 @@ questions:
 # Include{replicas}
 # Include{replica1}
 # Include{controllerExpertExtraArgs}
+  - variable: hastyPaste
+    group: App Configuration
+    label: Hasty Paste Configuration
+    schema:
+      additional_attrs: true
+      type: dict
+      attrs:
+        - variable: new_at_index
+          label: New at Index
+          description: Index page displays new paste page instead
+          schema:
+            type: boolean
+            default: false
+        - variable: enable_public_list
+          label: Enable Public List
+          description: Whether to enable public access for listing pastes
+          schema:
+            type: boolean
+            default: false
+        - variable: max_body_size
+          label: Max Body Size
+          description: The max body size, given in bytes
+          schema:
+            type: int
+            required: true
+            default: 2000000
+        - variable: log_level
+          label: Log Level
+          description: What log level to use
+          schema:
+            type: string
+            required: true
+            default: WARNING
+        - variable: workers
+          label: Workers
+          description: Number of separate processes to spawn
+          schema:
+            type: int
+            required: true
+            default: 1
+        - variable: interface
+          label: Interface (UI)
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: default_use_long_id
+                label: Default Use Long ID
+                description: Setting this to "True" or "False" hides the long id checkbox in UI
+                schema:
+                  type: boolean
+                  default: false
+              - variable: default_expire_time_enable
+                label: Default Expire Time Enable
+                description: Enable a default expire time in web ui
+                schema:
+                  type: boolean
+                  default: false
+              - variable: default_expire_time_minutes
+                label: Default Expire Time Minutes
+                description: Default minutes in ui for expiry if enabled
+                schema:
+                  type: int
+                  required: true
+                  default: 0
+              - variable: default_expire_time_hours
+                label: Default Expire Time Hours
+                description: Default hours in ui for expiry if enabled
+                schema:
+                  type: int
+                  required: true
+                  default: 1
+              - variable: default_expire_time_days
+                label: Default Expire Time Days
+                description: Default days in ui for expiry if enabled
+                schema:
+                  type: int
+                  required: true
+                  default: 0
+        - variable: branding
+          label: Branding
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: title
+                label: Title
+                description: Customize the app title
+                schema:
+                  type: string
+                  default: ""
+              - variable: description
+                label: Description
+                description: Customize the app description
+                schema:
+                  type: string
+                  default: ""
+              - variable: icon
+                label: Icon
+                description: Customize the app icon, provide as absolute filepath (Path inside the container)
+                schema:
+                  type: string
+                  default: ""
+              - variable: favicon
+                label: Favicon
+                description: Customize the app favicon, provide as absolute filepath (Path inside the container)
+                schema:
+                  type: string
+                  default: ""
+              - variable: css_file
+                label: CSS File
+                description: Customize the site theme, using a provided css file (Path inside the container)
+                schema:
+                  type: string
+                  default: ""
+              - variable: hide_version
+                label: Hide Version
+                description: Hide the app version number
+                schema:
+                  type: boolean
+                  default: false
 # Include{containerConfig}
 # Include{serviceRoot}
         - variable: main
