unset variable token

--- a/charts/incubator/jackett2telegram/values.yaml
+++ b/charts/incubator/jackett2telegram/values.yaml
@@ -4,7 +4,7 @@ image:
   tag: 1.9@sha256:c724e612504d6f9d83b979b3bb0190f10fa5ffcec77d4f5e89620e0bbc092e8c
 
 secretEnv:
-  TOKEN: ""
+  # TOKEN: ""
   CHATID: ""
 
 env:
