--- a/charts/incubator/hasty-paste/values.yaml
+++ b/charts/incubator/hasty-paste/values.yaml
@@ -7,7 +7,7 @@ hastyPaste:
   new_at_index: false
   enable_public_list: false
   max_body_size: 2000000
-  log_level: WARNING
+  log_level: INFO
   workers: 1
   interface:
     default_use_long_id: false
