--- a/charts/incubator/hasty-paste/values.yaml
+++ b/charts/incubator/hasty-paste/values.yaml
@@ -42,7 +42,7 @@ persistence:
 redis:
   enabled: true
   existingSecret: rediscreds
-  redisUsername: hasty-paste
+  redisUsername: hastypaste
 
 portal:
   enabled: true
