--- a/charts/incubator/serpbear/values.yaml
+++ b/charts/incubator/serpbear/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: towfiqi/serpbear
+  repository: tccr.io/truecharts/serpbear
   pullPolicy: IfNotPresent
-  tag: latest@sha256:09d962f84ebf85c8a033a524954ff198a7513afc5c86ecefce56b0b580350693
+  tag: latest@sha256:2aeb05064783dee6c17751eecb0d2d23f6f7e06719c6a34c6d757f7195df04d9
 
 secretEnv:
   USER: "admin"
