--- a/charts/incubator/hasty-paste/values.yaml
+++ b/charts/incubator/hasty-paste/values.yaml
@@ -27,6 +27,32 @@ envFrom:
   - secretRef:
       name: '{{ include "tc.common.names.fullname" . }}-secret'
 
+probes:
+  liveness:
+    enabled: true
+    custom: true
+    spec:
+      exec:
+        command:
+          - /bin/sh
+          - health-check.sh
+  readiness:
+    enabled: true
+    custom: true
+    spec:
+      exec:
+        command:
+          - /bin/sh
+          - health-check.sh
+  startup:
+    enabled: true
+    custom: true
+    spec:
+      exec:
+        command:
+          - /bin/sh
+          - health-check.sh
+
 service:
   main:
     ports:
