update container repo

--- a/charts/incubator/homebox/values.yaml
+++ b/charts/incubator/homebox/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/hay-kot/homebox
+  repository: tccr.io/truecharts/homebox
   pullPolicy: IfNotPresent
-  tag: v0.6.0@sha256:06691e25e5f7d2d6a47c5956326d906402aaca4290e801830784accf58cd460e
+  tag: 0.6.0@sha256:97dad0bc2e0683c22f1b29416ef2caa70fedc83688d1ee9dc57d7d862204a396
 
 secretEnv:
   HBOX_MAILER_USERNAME: ""
