--- a/charts/incubator/homebox/Chart.yaml
+++ b/charts/incubator/homebox/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: "v0.6.0"
+appVersion: "0.6.0"
 dependencies:
   - name: common
     repository: https://library-charts.truecharts.org
