--- a/charts/incubator/jackett2telegram/values.yaml
+++ b/charts/incubator/jackett2telegram/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: danimart1991/jackett2telegram
+  repository: tccr.io/truecharts/jackett2telegram
   pullPolicy: IfNotPresent
-  tag: 1.9@sha256:c724e612504d6f9d83b979b3bb0190f10fa5ffcec77d4f5e89620e0bbc092e8c
+  tag: 1.9.0@sha256:efc57e6a18dd7f6895a75202874f22a15091f93de25f4cbd53fdf8e144e86fef
 
 secretEnv:
   # TOKEN: ""
