--- a/charts/incubator/exportarr/values.yaml
+++ b/charts/incubator/exportarr/values.yaml
@@ -3,9 +3,11 @@ image:
   pullPolicy: IfNotPresent
   tag: v1.1.0@sha256:afd3a63b80c8a641a3bb20ff6088cb50c0501950687fbe2d57cac5282991c42a
 
-extraArgs:
-  - ./exportarr
-  - "{{ .Values.env.ARR_APP }}"
+command:
+  - /bin/sh
+  - -c
+  - |
+    exportarr {{ .Values.env.ARR_APP }}
 
 secretEnv:
   BASIC_AUTH_USERNAME: ""
