--- a/charts/incubator/exportarr/values.yaml
+++ b/charts/incubator/exportarr/values.yaml
@@ -3,11 +3,8 @@ image:
   pullPolicy: IfNotPresent
   tag: v1.1.0@sha256:afd3a63b80c8a641a3bb20ff6088cb50c0501950687fbe2d57cac5282991c42a
 
-command:
-  - /bin/sh
-  - -c
-  - |
-    exportarr {{ .Values.env.ARR_APP }}
+extraArgs:
+  - "{{ .Values.env.ARR_APP }}"
 
 secretEnv:
   BASIC_AUTH_USERNAME: ""
@@ -16,6 +13,7 @@ secretEnv:
 
 env:
   PORT: "{{ .Values.service.main.ports.main.port }}"
+  INTERFACE: "0.0.0.0"
   ARR_APP: "sonarr"
   URL: ""
   ENABLE_ADDITIONAL_METRICS: false
