--- a/.github/workflows/secgen.yaml
+++ b/.github/workflows/secgen.yaml
@@ -89,7 +89,16 @@ jobs:
                 trivy image -f template --template "@./templates/trivy-container.tpl" ${ghcrcont} >> website/docs/charts/${train}/${chartname}/container-security.md
                 echo "" >> website/docs/charts/${train}/${chartname}/container-security.md
                 done
-
+              }
+          cleanfiles() {
+              local chart="$1"
+              local chartname="$2"
+              local train="$3"
+              echo "sanitising website output..."
+              sed -i 's|<br>|<br />|g' website/docs/charts/${train}/${chartname}/helm-security.md
+              sed -i 's|<br>|<br />|g' website/docs/charts/${train}/${chartname}/container_sec_scan.md
+              sed -i 's|<hr>|<hr />|g' website/docs/charts/${train}/${chartname}/helm-security.md
+              sed -i 's|<hr>|<hr />|g' website/docs/charts/${train}/${chartname}/container_sec_scan.md
               }
           for train in enterprise stable incubator dependency; do
             echo "Processing Charts for Train: ${train}..."
@@ -97,6 +106,7 @@ jobs:
               chartname="$(basename "$(dirname "${chart}")")"
               helm_sec_scan "charts/${train}/${chart}" ${chart} ${train}
               # container_sec_scan "charts/${train}/${chart}" ${chartname} ${train}
+              cleanfiles "charts/${train}/${chart}" ${chartname} ${train}
             done
           done
           echo "finsihed security scan"
