--- a/.github/workflows/secgen.yaml
+++ b/.github/workflows/secgen.yaml
@@ -94,7 +94,7 @@ jobs:
               local chart="$1"
               local chartname="$2"
               local train="$3"
-              echo "sanitising website output..."
+              echo "sanitising website output for ${chartname}..."
               sed -i 's|<br>|<br />|g' website/docs/charts/${train}/${chartname}/helm-security.md
               sed -i 's|<br>|<br />|g' website/docs/charts/${train}/${chartname}/container_sec_scan.md
               sed -i 's|<hr>|<hr />|g' website/docs/charts/${train}/${chartname}/helm-security.md
@@ -103,10 +103,9 @@ jobs:
           for train in enterprise stable incubator dependency; do
             echo "Processing Charts for Train: ${train}..."
             for chart in $(ls "charts/${train}"); do
-              chartname="$(basename "$(dirname "${chart}")")"
               helm_sec_scan "charts/${train}/${chart}" ${chart} ${train}
-              # container_sec_scan "charts/${train}/${chart}" ${chartname} ${train}
-              cleanfiles "charts/${train}/${chart}" ${chartname} ${train}
+              # container_sec_scan "charts/${train}/${chart}" ${chart} ${train}
+              cleanfiles "charts/${train}/${chart}" ${chart} ${train}
             done
           done
           echo "finsihed security scan"
