--- a/.github/workflows/charts-release.yaml
+++ b/.github/workflows/charts-release.yaml
@@ -107,6 +107,7 @@ jobs:
                 else
                    echo "helm-security not found, starting with empty helm-security..."
                    touch "website/docs/charts/${train}/${chart}/helm-security.md"
+                   echo "# Helm Security" >> website/docs/charts/${train}/${chart}/helm-security.md
                 fi
                 if [[ -f "website/docs/charts/${train}/${chart}/container-security.md" ]]; then
                    echo "container-security found..."
@@ -114,6 +115,7 @@ jobs:
                 else
                    echo "container-security not found, starting with empty container-security..."
                    touch "website/docs/charts/${train}/${chart}/container-security.md"
+                   echo "# Helm Security" >> website/docs/charts/${train}/${chart}/container-security.md
                 fi
                 # keep some docs safe
                 mv -f website/docs/charts/${train}/${chart}/CHANGELOG.md tmp/website/docs/charts/${train}/${chart}/CHANGELOG.md || :
@@ -135,14 +137,6 @@ jobs:
                 sed -i '1d' "website/docs/charts/${train}/${chart}/CHANGELOG.md" || echo "failed to sed 1d changelog..."
                 cat "charts/${train}/${chart}/app-changelog.md" | cat - "website/docs/charts/${train}/${chart}/CHANGELOG.md" > temp && mv temp "website/docs/charts/${train}/${chart}/CHANGELOG.md"
                 sed -i '1s/^/# Changelog\n\n/' "website/docs/charts/${train}/${chart}/CHANGELOG.md" || echo "failed to add changelog header..."
-                
-                # Ensure helm security header is always set
-                sed -i '1d' "website/docs/charts/${train}/${chart}/helm-security.md" || echo "failed to sed 1d helm-security..."
-                sed -i '1s/^/# Helm Security Scan\n\n/' "website/docs/charts/${train}/${chart}/helm-security.md" || echo "failed to add helm-security header..."
-                
-                # Ensure container security header is always set
-                sed -i '1d' "website/docs/charts/${train}/${chart}/container-security.md" || echo "failed to sed 1d container-security..."
-                sed -i '1s/^/# Container Security Scan\n\n/' "website/docs/charts/${train}/${chart}/container-security.md" || echo "failed to add container-security header..."
 
                 touch website/docs/charts/${train}/${chart}/index.md
                 echo "# ${chart}" >> website/docs/charts/${train}/${chart}/index.md
