Fix printf error
Fix printf complaining it can't print a float as a string.
Fixed a small typo in the validate label.

--- a/charts/incubator/arksurvivalevolved/questions.yaml
+++ b/charts/incubator/arksurvivalevolved/questions.yaml
@@ -61,7 +61,7 @@ questions:
             type: string
             default: ""
         - variable: validate
-          label: Valitdate
+          label: Validate
           description: "Set the Variable to true if you want to validate the installation otherwise leave it blank."
           schema:
             type: boolean
