fix(docs): limit scope of container scans to "vuln".

--- a/.github/workflows/secgen.yaml
+++ b/.github/workflows/secgen.yaml
@@ -93,7 +93,7 @@ jobs:
               for container in $(cat ${chart}/render/containers.tmp | sort | uniq); do
                 echo "**Container: ${container}**" >> website/docs/charts/${train}/${chartname}/container-security.md
                 echo "" >> website/docs/charts/${train}/${chartname}/container-security.md
-                trivy image -f template --template "@./templates/trivy-container.tpl" ${container} >> website/docs/charts/${train}/${chartname}/container-security.md || echo "trivy container scan failed..."
+                trivy image --security-checks vuln -f template --template "@./templates/trivy-container.tpl" ${container} >> website/docs/charts/${train}/${chartname}/container-security.md || echo "trivy container scan failed..."
                 echo "" >> website/docs/charts/${train}/${chartname}/container-security.md
               done
               }
